Getting code coverage for both server and client working
